--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -17,7 +17,7 @@ body {
     margin: 0 0 10px;
 }
 .table-title h2 {
-    margin: 8px 0 0;
+    margin: 16px 0;
     font-size: 22px;
 }
 .search-box {
@@ -41,6 +41,45 @@ body {
     top: 8px;
     left: 10px;
 }
+
+.back-btn {
+    margin: 10px 0;
+    padding: 10px 16px !important;
+    font-size: 14px;
+    font-weight: 500;
+    display: inline-block;
+    background-color: #565656 !important;
+    color: #ffffff;
+    border: 3px solid #ffffff;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.05);
+    text-decoration: none;
+    line-height: 1.5;
+}
+
+.back-btn i {
+    font-size: 16px;
+    color: #ffffff;
+    margin-right: 8px;
+}
+
+.back-btn span {
+    color: #ffffff;
+}
+
+.back-btn:hover {
+    background-color: #f8f9fa;
+    border-color: #c0c0c0;
+    color: #333333;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.back-btn:active {
+    transform: translateY(1px);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
 table.table tr th,
 table.table tr td {
     border-color: #e9e9e9;
@@ -153,11 +192,93 @@ table.table td i {
 }
 
 .fa-trash-alt {
-    font-size: 14px; /* Giảm kích thước icon */
-    color: #dc3545; /* Màu đỏ của Bootstrap */
+    font-size: 14px;
+    color: #dc3545;
     transition: all 0.2s ease;
 }
 
 .btn-link:hover .fa-trash-alt {
     transform: scale(1.1); /* Hiệu ứng hover nhẹ */
+}
+
+/* CSS pagination của index */
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 0 0;
+}
+
+.pagination-info {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.pagination-info span {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 13px;
+    color: #344054;
+}
+
+.pagination-info .total-records {
+    font-weight: 700;
+}
+
+.page-info {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.page-info-text {
+    display: flex;
+    align-items: center;
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 13px;
+    text-align: center;
+    color: #333333;
+}
+
+.page-number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 4px;
+    color: #333333;
+    font-size: 13px;
+    font-weight: 500;
+    border: 1px solid #dadada;
+    border-radius: 50%;
+    padding: 4px 12px;
+    background-color: #ffffff;
+}
+
+.all-page-number {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 13px;
+    color: #333333;
+}
+
+.next-page-btn {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 7px 13px;
+    background: #ebebeb;
+    border: none;
+    border-radius: 16px;
+    cursor: pointer;
+}
+
+.next-page-btn span {
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 12px;
+    background: #1d1d1d;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
