sửa giao diện trang đăng ký tài khoản, thêm chức năng tìm kiếm ở homepage, thêm hai trang danh mục và thương hiệu

--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -151,10 +151,14 @@ hr {
     opacity: 0.67;
 }
 
-.pagination {
-    color: #787a80;
-    margin: 15px 0;
+.pagination p {
+    color: #787878;
+    margin: 20px 20px 50px 20px;
     cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: Lato;
+    transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 576px) {
