--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -183,3 +183,25 @@ hr {
     }
 }
 
+.out-of-stock-message {
+    padding: 10px;
+    margin: 10px 0;
+    color: #f8f8f8;
+    font-weight: 600;
+    border: 1px solid #000000;
+    border-radius: 4px;
+    background-color: rgba(255, 0, 0, 0.808);
+    text-align: center;
+    width: 30%;
+}
+
+.text-danger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.text-danger i {
+    font-size: 1.2em;
+}
