--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,6 +7,15 @@
 }
 a {
     text-decoration: none;
+    color: #fff;
+}
+a:hover {
+    color: #fff !important;
+}
+
+li {
+    display: flex;
+    align-items: center;
 }
 :target {
     display: block !important;
@@ -80,7 +89,7 @@ header {
 }
 
 .search-btn {
-    padding: 12px 20px;
+    padding: 15px 20px;
     background: #3498db;
     border: none;
     color: white;
