fix một số thứ và thêm một vài thống kê, biểu đồ, thêm profile và update profile ở admin

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1520,6 +1520,7 @@ h6,
   padding: 30px 20px;
   box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
   border-radius: 7px;
+  min-height: 190px;
 }
 .icon-card.icon-card-3 {
   display: block;
