--- a/public/css/home.css
+++ b/public/css/home.css
@@ -40,6 +40,7 @@ header {
     height: 60px;
     display: flex;
     align-items: center;
+    margin-right: 30px;
 }
 
 /* Search Container Styles */
